# ChessListenDesktopApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt
src/: main.cpp
src/backend/: convertPgnStringToArrayOfSanMoves.cpp  convertTextFileToString.cpp  createFliteAudioFileForMove.cpp  expandSanToHumanReadableString.cpp  playWavAudioFile.cpp
src/env_variables/: static_variables.cpp
src/gui/: GameStateManager.cpp  GameStateManager.h  ListenPanel.cpp  ListenPanel.h  MainWindow.cpp  MainWindow.h  UploadPanel.cpp  UploadPanel.h
src/gui/upload_panel/functions/: detectIfTextIsFilePathOrRawPgn.cpp
